bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : definiciones

   2  definiciones :
   3               | definiciones definicion

   4  definicion : defVariable
   5             | struct
   6             | deffuncion

   7  defVariables :
   8               | defVariables defVariable

   9  defVariable : "VAR" "IDENT" ':' tipo ';'

  10  tipo : "INT"
  11       | "REAL"
  12       | "FLOAT"
  13       | "CHAR"
  14       | "IDENT"
  15       | '[' "LITERALINT" ']' tipo

  16  struct : "STRUCT" "IDENT" '{' defCamposStruct '}' ';'

  17  defCamposStruct :
  18                  | defCamposStruct defCampoStruct

  19  defCampoStruct : "IDENT" ':' tipo ';'

  20  deffuncion : "IDENT" '(' paramsFuncOpt ')' valorRetorno '{' defVariables sentencias '}'

  21  valorRetorno :
  22               | ':' tipo

  23  paramsFunc : parametro
  24             | paramsFunc ',' parametro

  25  paramsFuncOpt :
  26                | paramsFunc

  27  parametro : "IDENT" ':' tipo

  28  sentencias :
  29             | sentencias sentencia

  30  sentencia : "READ" expr ';'
  31            | "RETURN" exprOpt ';'
  32            | callFunc ';'
  33            | sentenciaPrint
  34            | expr '=' expr ';'
  35            | "IF" '(' exprOpt ')' '{' sentencias '}' elseOpt
  36            | "WHILE" '(' exprOpt ')' '{' sentencias '}'

  37  elseOpt :
  38          | "ELSE" '{' sentencias '}'

  39  sentenciaPrint : "PRINT" expr ';'
  40                 | "PRINTSP" expr ';'
  41                 | "PRINTLN" exprOpt ';'

  42  exprOpt :
  43          | expr

  44  expr : "LITERALINT"
  45       | "LITERALREAL"
  46       | "CHARACTER"
  47       | "CAST" '<' tipo '>' '(' expr ')'
  48       | "IDENT"
  49       | exprBinaria
  50       | '(' exprBinaria ')'
  51       | '!' expr
  52       | expr '.' "IDENT"
  53       | expr '[' expr ']'
  54       | callFunc

  55  exprBinaria : expr '*' expr
  56              | expr '+' expr
  57              | expr '/' expr
  58              | expr '-' expr
  59              | expr "OR" expr
  60              | expr "AND" expr
  61              | expr '<' expr
  62              | expr '>' expr
  63              | expr "MAYORIGUAL" expr
  64              | expr "MENORIGUAL" expr
  65              | expr "NOTIGUAL" expr
  66              | expr "IGUAL" expr

  67  callFunc : "IDENT" '(' listaParamOpt ')'

  68  listaParam : expr
  69             | listaParam ',' expr

  70  listaParamOpt :
  71                | listaParam

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones .  (1)
	definiciones : definiciones . definicion  (3)

	"VAR"  shift 3
	"IDENT"  shift 4
	"STRUCT"  shift 5
	$end  reduce 1

	definicion  goto 6
	defVariable  goto 7
	struct  goto 8
	deffuncion  goto 9


state 3
	defVariable : "VAR" . "IDENT" ':' tipo ';'  (9)

	"IDENT"  shift 10
	.  error


state 4
	deffuncion : "IDENT" . '(' paramsFuncOpt ')' valorRetorno '{' defVariables sentencias '}'  (20)

	'('  shift 11
	.  error


state 5
	struct : "STRUCT" . "IDENT" '{' defCamposStruct '}' ';'  (16)

	"IDENT"  shift 12
	.  error


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : defVariable .  (4)

	.  reduce 4


state 8
	definicion : struct .  (5)

	.  reduce 5


state 9
	definicion : deffuncion .  (6)

	.  reduce 6


state 10
	defVariable : "VAR" "IDENT" . ':' tipo ';'  (9)

	':'  shift 13
	.  error


state 11
	deffuncion : "IDENT" '(' . paramsFuncOpt ')' valorRetorno '{' defVariables sentencias '}'  (20)
	paramsFuncOpt : .  (25)

	"IDENT"  shift 14
	')'  reduce 25

	paramsFuncOpt  goto 15
	paramsFunc  goto 16
	parametro  goto 17


state 12
	struct : "STRUCT" "IDENT" . '{' defCamposStruct '}' ';'  (16)

	'{'  shift 18
	.  error


state 13
	defVariable : "VAR" "IDENT" ':' . tipo ';'  (9)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"FLOAT"  shift 23
	"CHAR"  shift 24
	.  error

	tipo  goto 25


state 14
	parametro : "IDENT" . ':' tipo  (27)

	':'  shift 26
	.  error


state 15
	deffuncion : "IDENT" '(' paramsFuncOpt . ')' valorRetorno '{' defVariables sentencias '}'  (20)

	')'  shift 27
	.  error


state 16
	paramsFunc : paramsFunc . ',' parametro  (24)
	paramsFuncOpt : paramsFunc .  (26)

	','  shift 28
	')'  reduce 26


state 17
	paramsFunc : parametro .  (23)

	.  reduce 23


state 18
	struct : "STRUCT" "IDENT" '{' . defCamposStruct '}' ';'  (16)
	defCamposStruct : .  (17)

	.  reduce 17

	defCamposStruct  goto 29


state 19
	tipo : '[' . "LITERALINT" ']' tipo  (15)

	"LITERALINT"  shift 30
	.  error


state 20
	tipo : "IDENT" .  (14)

	.  reduce 14


state 21
	tipo : "INT" .  (10)

	.  reduce 10


state 22
	tipo : "REAL" .  (11)

	.  reduce 11


state 23
	tipo : "FLOAT" .  (12)

	.  reduce 12


state 24
	tipo : "CHAR" .  (13)

	.  reduce 13


state 25
	defVariable : "VAR" "IDENT" ':' tipo . ';'  (9)

	';'  shift 31
	.  error


state 26
	parametro : "IDENT" ':' . tipo  (27)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"FLOAT"  shift 23
	"CHAR"  shift 24
	.  error

	tipo  goto 32


state 27
	deffuncion : "IDENT" '(' paramsFuncOpt ')' . valorRetorno '{' defVariables sentencias '}'  (20)
	valorRetorno : .  (21)

	':'  shift 33
	'{'  reduce 21

	valorRetorno  goto 34


state 28
	paramsFunc : paramsFunc ',' . parametro  (24)

	"IDENT"  shift 14
	.  error

	parametro  goto 35


state 29
	struct : "STRUCT" "IDENT" '{' defCamposStruct . '}' ';'  (16)
	defCamposStruct : defCamposStruct . defCampoStruct  (18)

	"IDENT"  shift 36
	'}'  shift 37
	.  error

	defCampoStruct  goto 38


state 30
	tipo : '[' "LITERALINT" . ']' tipo  (15)

	']'  shift 39
	.  error


state 31
	defVariable : "VAR" "IDENT" ':' tipo ';' .  (9)

	.  reduce 9


state 32
	parametro : "IDENT" ':' tipo .  (27)

	.  reduce 27


state 33
	valorRetorno : ':' . tipo  (22)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"FLOAT"  shift 23
	"CHAR"  shift 24
	.  error

	tipo  goto 40


state 34
	deffuncion : "IDENT" '(' paramsFuncOpt ')' valorRetorno . '{' defVariables sentencias '}'  (20)

	'{'  shift 41
	.  error


state 35
	paramsFunc : paramsFunc ',' parametro .  (24)

	.  reduce 24


state 36
	defCampoStruct : "IDENT" . ':' tipo ';'  (19)

	':'  shift 42
	.  error


state 37
	struct : "STRUCT" "IDENT" '{' defCamposStruct '}' . ';'  (16)

	';'  shift 43
	.  error


state 38
	defCamposStruct : defCamposStruct defCampoStruct .  (18)

	.  reduce 18


state 39
	tipo : '[' "LITERALINT" ']' . tipo  (15)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"FLOAT"  shift 23
	"CHAR"  shift 24
	.  error

	tipo  goto 44


state 40
	valorRetorno : ':' tipo .  (22)

	.  reduce 22


state 41
	deffuncion : "IDENT" '(' paramsFuncOpt ')' valorRetorno '{' . defVariables sentencias '}'  (20)
	defVariables : .  (7)

	.  reduce 7

	defVariables  goto 45


state 42
	defCampoStruct : "IDENT" ':' . tipo ';'  (19)

	'['  shift 19
	"IDENT"  shift 20
	"INT"  shift 21
	"REAL"  shift 22
	"FLOAT"  shift 23
	"CHAR"  shift 24
	.  error

	tipo  goto 46


state 43
	struct : "STRUCT" "IDENT" '{' defCamposStruct '}' ';' .  (16)

	.  reduce 16


state 44
	tipo : '[' "LITERALINT" ']' tipo .  (15)

	.  reduce 15


state 45
	defVariables : defVariables . defVariable  (8)
	deffuncion : "IDENT" '(' paramsFuncOpt ')' valorRetorno '{' defVariables . sentencias '}'  (20)
	sentencias : .  (28)

	"VAR"  shift 3
	'!'  reduce 28
	"IDENT"  reduce 28
	"LITERALINT"  reduce 28
	'}'  reduce 28
	'('  reduce 28
	"READ"  reduce 28
	"RETURN"  reduce 28
	"IF"  reduce 28
	"WHILE"  reduce 28
	"PRINT"  reduce 28
	"PRINTSP"  reduce 28
	"PRINTLN"  reduce 28
	"LITERALREAL"  reduce 28
	"CHARACTER"  reduce 28
	"CAST"  reduce 28

	defVariable  goto 47
	sentencias  goto 48


state 46
	defCampoStruct : "IDENT" ':' tipo . ';'  (19)

	';'  shift 49
	.  error


state 47
	defVariables : defVariables defVariable .  (8)

	.  reduce 8


state 48
	deffuncion : "IDENT" '(' paramsFuncOpt ')' valorRetorno '{' defVariables sentencias . '}'  (20)
	sentencias : sentencias . sentencia  (29)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'}'  shift 53
	'('  shift 54
	"READ"  shift 55
	"RETURN"  shift 56
	"IF"  shift 57
	"WHILE"  shift 58
	"PRINT"  shift 59
	"PRINTSP"  shift 60
	"PRINTLN"  shift 61
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	.  error

	sentencia  goto 65
	expr  goto 66
	callFunc  goto 67
	sentenciaPrint  goto 68
	exprBinaria  goto 69


state 49
	defCampoStruct : "IDENT" ':' tipo ';' .  (19)

	.  reduce 19


state 50
	expr : '!' . expr  (51)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	.  error

	expr  goto 70
	callFunc  goto 71
	exprBinaria  goto 69


state 51
	expr : "IDENT" .  (48)
	callFunc : "IDENT" . '(' listaParamOpt ')'  (67)

	'('  shift 72
	"AND"  reduce 48
	"OR"  reduce 48
	'>'  reduce 48
	'<'  reduce 48
	"MENORIGUAL"  reduce 48
	"MAYORIGUAL"  reduce 48
	"NOTIGUAL"  reduce 48
	"IGUAL"  reduce 48
	'+'  reduce 48
	'-'  reduce 48
	'*'  reduce 48
	'/'  reduce 48
	'.'  reduce 48
	'['  reduce 48
	';'  reduce 48
	']'  reduce 48
	')'  reduce 48
	','  reduce 48
	'='  reduce 48


state 52
	expr : "LITERALINT" .  (44)

	.  reduce 44


state 53
	deffuncion : "IDENT" '(' paramsFuncOpt ')' valorRetorno '{' defVariables sentencias '}' .  (20)

	.  reduce 20


state 54
	expr : '(' . exprBinaria ')'  (50)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	.  error

	expr  goto 73
	callFunc  goto 71
	exprBinaria  goto 74


state 55
	sentencia : "READ" . expr ';'  (30)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	.  error

	expr  goto 75
	callFunc  goto 71
	exprBinaria  goto 69


state 56
	sentencia : "RETURN" . exprOpt ';'  (31)
	exprOpt : .  (42)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	';'  reduce 42

	expr  goto 76
	exprOpt  goto 77
	callFunc  goto 71
	exprBinaria  goto 69


state 57
	sentencia : "IF" . '(' exprOpt ')' '{' sentencias '}' elseOpt  (35)

	'('  shift 78
	.  error


state 58
	sentencia : "WHILE" . '(' exprOpt ')' '{' sentencias '}'  (36)

	'('  shift 79
	.  error


state 59
	sentenciaPrint : "PRINT" . expr ';'  (39)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	.  error

	expr  goto 80
	callFunc  goto 71
	exprBinaria  goto 69


state 60
	sentenciaPrint : "PRINTSP" . expr ';'  (40)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	.  error

	expr  goto 81
	callFunc  goto 71
	exprBinaria  goto 69


state 61
	sentenciaPrint : "PRINTLN" . exprOpt ';'  (41)
	exprOpt : .  (42)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	';'  reduce 42

	expr  goto 76
	exprOpt  goto 82
	callFunc  goto 71
	exprBinaria  goto 69


state 62
	expr : "LITERALREAL" .  (45)

	.  reduce 45


state 63
	expr : "CHARACTER" .  (46)

	.  reduce 46


state 64
	expr : "CAST" . '<' tipo '>' '(' expr ')'  (47)

	'<'  shift 83
	.  error


state 65
	sentencias : sentencias sentencia .  (29)

	.  reduce 29


state 66
	sentencia : expr . '=' expr ';'  (34)
	expr : expr . '.' "IDENT"  (52)
	expr : expr . '[' expr ']'  (53)
	exprBinaria : expr . '*' expr  (55)
	exprBinaria : expr . '+' expr  (56)
	exprBinaria : expr . '/' expr  (57)
	exprBinaria : expr . '-' expr  (58)
	exprBinaria : expr . "OR" expr  (59)
	exprBinaria : expr . "AND" expr  (60)
	exprBinaria : expr . '<' expr  (61)
	exprBinaria : expr . '>' expr  (62)
	exprBinaria : expr . "MAYORIGUAL" expr  (63)
	exprBinaria : expr . "MENORIGUAL" expr  (64)
	exprBinaria : expr . "NOTIGUAL" expr  (65)
	exprBinaria : expr . "IGUAL" expr  (66)

	"AND"  shift 84
	"OR"  shift 85
	'>'  shift 86
	'<'  shift 87
	"MENORIGUAL"  shift 88
	"MAYORIGUAL"  shift 89
	"NOTIGUAL"  shift 90
	"IGUAL"  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'.'  shift 96
	'['  shift 97
	'='  shift 98
	.  error


state 67
	sentencia : callFunc . ';'  (32)
	expr : callFunc .  (54)

	';'  shift 99
	"AND"  reduce 54
	"OR"  reduce 54
	'>'  reduce 54
	'<'  reduce 54
	"MENORIGUAL"  reduce 54
	"MAYORIGUAL"  reduce 54
	"NOTIGUAL"  reduce 54
	"IGUAL"  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	'*'  reduce 54
	'/'  reduce 54
	'.'  reduce 54
	'['  reduce 54
	'='  reduce 54


state 68
	sentencia : sentenciaPrint .  (33)

	.  reduce 33


state 69
	expr : exprBinaria .  (49)

	.  reduce 49


state 70
	expr : '!' expr .  (51)
	expr : expr . '.' "IDENT"  (52)
	expr : expr . '[' expr ']'  (53)
	exprBinaria : expr . '*' expr  (55)
	exprBinaria : expr . '+' expr  (56)
	exprBinaria : expr . '/' expr  (57)
	exprBinaria : expr . '-' expr  (58)
	exprBinaria : expr . "OR" expr  (59)
	exprBinaria : expr . "AND" expr  (60)
	exprBinaria : expr . '<' expr  (61)
	exprBinaria : expr . '>' expr  (62)
	exprBinaria : expr . "MAYORIGUAL" expr  (63)
	exprBinaria : expr . "MENORIGUAL" expr  (64)
	exprBinaria : expr . "NOTIGUAL" expr  (65)
	exprBinaria : expr . "IGUAL" expr  (66)

	'>'  shift 86
	'<'  shift 87
	"MENORIGUAL"  shift 88
	"MAYORIGUAL"  shift 89
	"NOTIGUAL"  shift 90
	"IGUAL"  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'.'  shift 96
	'['  shift 97
	"AND"  reduce 51
	"OR"  reduce 51
	';'  reduce 51
	']'  reduce 51
	')'  reduce 51
	','  reduce 51
	'='  reduce 51


state 71
	expr : callFunc .  (54)

	.  reduce 54


state 72
	callFunc : "IDENT" '(' . listaParamOpt ')'  (67)
	listaParamOpt : .  (70)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	')'  reduce 70

	expr  goto 100
	callFunc  goto 71
	exprBinaria  goto 69
	listaParamOpt  goto 101
	listaParam  goto 102


state 73
	expr : expr . '.' "IDENT"  (52)
	expr : expr . '[' expr ']'  (53)
	exprBinaria : expr . '*' expr  (55)
	exprBinaria : expr . '+' expr  (56)
	exprBinaria : expr . '/' expr  (57)
	exprBinaria : expr . '-' expr  (58)
	exprBinaria : expr . "OR" expr  (59)
	exprBinaria : expr . "AND" expr  (60)
	exprBinaria : expr . '<' expr  (61)
	exprBinaria : expr . '>' expr  (62)
	exprBinaria : expr . "MAYORIGUAL" expr  (63)
	exprBinaria : expr . "MENORIGUAL" expr  (64)
	exprBinaria : expr . "NOTIGUAL" expr  (65)
	exprBinaria : expr . "IGUAL" expr  (66)

	"AND"  shift 84
	"OR"  shift 85
	'>'  shift 86
	'<'  shift 87
	"MENORIGUAL"  shift 88
	"MAYORIGUAL"  shift 89
	"NOTIGUAL"  shift 90
	"IGUAL"  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'.'  shift 96
	'['  shift 97
	.  error


state 74
	expr : exprBinaria .  (49)
	expr : '(' exprBinaria . ')'  (50)

	')'  shift 103
	"AND"  reduce 49
	"OR"  reduce 49
	'>'  reduce 49
	'<'  reduce 49
	"MENORIGUAL"  reduce 49
	"MAYORIGUAL"  reduce 49
	"NOTIGUAL"  reduce 49
	"IGUAL"  reduce 49
	'+'  reduce 49
	'-'  reduce 49
	'*'  reduce 49
	'/'  reduce 49
	'.'  reduce 49
	'['  reduce 49


state 75
	sentencia : "READ" expr . ';'  (30)
	expr : expr . '.' "IDENT"  (52)
	expr : expr . '[' expr ']'  (53)
	exprBinaria : expr . '*' expr  (55)
	exprBinaria : expr . '+' expr  (56)
	exprBinaria : expr . '/' expr  (57)
	exprBinaria : expr . '-' expr  (58)
	exprBinaria : expr . "OR" expr  (59)
	exprBinaria : expr . "AND" expr  (60)
	exprBinaria : expr . '<' expr  (61)
	exprBinaria : expr . '>' expr  (62)
	exprBinaria : expr . "MAYORIGUAL" expr  (63)
	exprBinaria : expr . "MENORIGUAL" expr  (64)
	exprBinaria : expr . "NOTIGUAL" expr  (65)
	exprBinaria : expr . "IGUAL" expr  (66)

	"AND"  shift 84
	"OR"  shift 85
	'>'  shift 86
	'<'  shift 87
	"MENORIGUAL"  shift 88
	"MAYORIGUAL"  shift 89
	"NOTIGUAL"  shift 90
	"IGUAL"  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'.'  shift 96
	'['  shift 97
	';'  shift 104
	.  error


state 76
	exprOpt : expr .  (43)
	expr : expr . '.' "IDENT"  (52)
	expr : expr . '[' expr ']'  (53)
	exprBinaria : expr . '*' expr  (55)
	exprBinaria : expr . '+' expr  (56)
	exprBinaria : expr . '/' expr  (57)
	exprBinaria : expr . '-' expr  (58)
	exprBinaria : expr . "OR" expr  (59)
	exprBinaria : expr . "AND" expr  (60)
	exprBinaria : expr . '<' expr  (61)
	exprBinaria : expr . '>' expr  (62)
	exprBinaria : expr . "MAYORIGUAL" expr  (63)
	exprBinaria : expr . "MENORIGUAL" expr  (64)
	exprBinaria : expr . "NOTIGUAL" expr  (65)
	exprBinaria : expr . "IGUAL" expr  (66)

	"AND"  shift 84
	"OR"  shift 85
	'>'  shift 86
	'<'  shift 87
	"MENORIGUAL"  shift 88
	"MAYORIGUAL"  shift 89
	"NOTIGUAL"  shift 90
	"IGUAL"  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'.'  shift 96
	'['  shift 97
	';'  reduce 43
	')'  reduce 43


state 77
	sentencia : "RETURN" exprOpt . ';'  (31)

	';'  shift 105
	.  error


state 78
	sentencia : "IF" '(' . exprOpt ')' '{' sentencias '}' elseOpt  (35)
	exprOpt : .  (42)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	')'  reduce 42

	expr  goto 76
	exprOpt  goto 106
	callFunc  goto 71
	exprBinaria  goto 69


state 79
	sentencia : "WHILE" '(' . exprOpt ')' '{' sentencias '}'  (36)
	exprOpt : .  (42)

	'!'  shift 50
	"IDENT"  shift 51
	"LITERALINT"  shift 52
	'('  shift 54
	"LITERALREAL"  shift 62
	"CHARACTER"  shift 63
	"CAST"  shift 64
	')'  reduce 42

	expr  goto 76
	exprOpt  goto 107
	callFunc  goto 71
	exprBinaria  goto 69


state 80
	sentenciaPrint : "PRINT" expr . ';'  (39)
	expr : expr . '.' "IDENT"  (52)
	expr : expr . '[' expr ']'  (53)
	exprBinaria : expr . '*' expr  (55)
	exprBinaria : expr . '+' expr  (56)
	exprBinaria : expr . '/' expr  (57)
	exprBinaria : expr . '-' expr  (58)
	exprBinaria : expr . "OR" expr  (59)
	exprBinaria : expr . "AND" expr  (60)
	exprBinaria : expr . '<' expr  (61)
	exprBinaria : expr . '>' expr  (62)
	exprBinaria : expr . "MAYORIGUAL" expr  (63)
	exprBinaria : expr . "MENORIGUAL" expr  (64)
	exprBinaria : expr . "NOTIGUAL" expr  (65)
	exprBinaria : expr . "IGUAL" expr  (66)

	"AND"  shift 84
	"OR"  shift 85
	'>'  shift 86
	'<'  shift 87
	"MENORIGUAL"  shift 88
	"MAYORIGUAL"  shift 89
	"NOTIGUAL"  shift 90
	"IGUAL"  shift 91
	'+'  shift 92
	'-'  shift 93
	'*'  shift 94
	'/'  shift 95
	'.'  shift 96
	'['  shift 97
	';'  shift 108
	.  error


state 81
	sentenciaPrint : "PRINTSP" expr . ';'  (40)
	expr : expr . '.' "IDENT"  (52)
	expr : expr . '[' expr ']'  (53)
	exprBinaria : expr . '*' expr  (55)
	exprBinaria : expr . '+' expr  (56)
	exprBinaria : expr . '/' expr  (57)
	exprBinaria : expr . '-' expr  (58)
	exprBinaria : expr . "OR" expr  (59)
	exprBinaria : expr . "AND" expr  (60)
	exprBinaria : expr . '<' expr  (61)
	exprBinaria : expr . '>' expr  (62)
	exprBinaria : expr . "MAYORIGUAL" expr  (63)
	exprBinaria : expr . "MENORIGUAL" expr  (64)
	exprBinaria : expr . "NOTIGUAL" expr  (65)
	exprBinaria : expr . "IGUAL" expr  (66)

	"AND"  shift 84
	"OR"  shift 85
	'>'  shift 86
	'<'  shift 87
	"MENORIGUAL"  shift 88
